--- a/airflow/api_connexion/openapi/v1.yaml
+++ b/airflow/api_connexion/openapi/v1.yaml
@@ -428,6 +428,25 @@ paths:
                 $ref: '#/components/schemas/DAGCollection'
         '401':
           $ref: '#/components/responses/Unauthenticated'
+    
+    post:
+      summary: Create DAG
+      description: Create Dag via file upload
+      x-openapi-router-controller: airflow.api_connexion.endpoints.dag_endpoint
+      operationId: create_dag
+      tags: [DAG]
+      requestBody:
+        content:
+          text/x-python: {}
+      responses:
+        '200':
+          description: succeeded
+          content: {}
+        '404':
+          description: failed
+          content: {}
+
+
 
     patch:
       summary: Update DAGs
